--- a/templates/purchases/new_purchase.html
+++ b/templates/purchases/new_purchase.html
@@ -138,7 +138,7 @@
                     <input type="number" class="form-control input-glass quantity" name="quantity[]" value="1" min="1" required>
                 </td>
                 <td>
-                    <input type="number" step="0.01" class="form-control input-glass price" name="price[]" value="0.00" required>
+                    <input type="number" step="0.01" class="form-control input-glass price" name="price[]">
                 </td>
                 <td class="text-end total-cell fw-bold text-dark">₹0.00</td>
                 <td class="text-center">
@@ -227,3 +227,4 @@
     {{ products|tojson|safe }}
 </script>
 {% endblock %}
+
